--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -367,6 +367,55 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP delay %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>delay</code>.
+    </p>
+    <p>
+    Time shifts the observable sequence by dueTime. The relative time intervals between the values are preserved.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/delay/delay.php
+
+$loop = new \React\EventLoop\StreamSelectLoop();
+
+$scheduler  = new \Rx\Scheduler\EventLoopScheduler($loop);
+
+\Rx\Observable::interval(1000, $scheduler)
+    ->doOnNext(function ($x) {
+        echo "Side effect: " . $x . "\n";
+    })
+    ->delay(1000)
+    ->take(5)
+    ->subscribe($createStdoutObserver(), $scheduler);
+
+$loop->run();
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Side effect: 0
+Next value: 0
+Side effect: 1
+Next value: 1
+Side effect: 2
+Next value: 2
+Side effect: 3
+Next value: 3
+Side effect: 4
+Next value: 4
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY delay delay_subscription delay_with_selector %}
      <p>
       <span style="color:#ff0000">TBD</span>
