--- a/documentation/operators/start.html
+++ b/documentation/operators/start.html
@@ -403,6 +403,38 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP start %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>start</code>.
+    </p>
+    <p>
+    Invokes the specified function asynchronously on the specified scheduler, surfacing the result through an observable sequence.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/start/start.php
+
+$source = Rx\Observable::start(function () {
+    return 42;
+});
+
+$source->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 42
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY start start_async to_async %}
     <p>
      <span style="color:#f00">TBD</span>
