--- a/documentation/operators/catch.html
+++ b/documentation/operators/catch.html
@@ -379,6 +379,40 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP catchError %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>catchError</code>.
+    </p>
+    <p>
+    Continues an observable sequence that is terminated by an exception with the next observable sequence.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/catch/catchError.php
+
+$obs2 = Rx\Observable::just(42);
+
+$source = \Rx\Observable::error(new Exception("Some error"))
+    ->catchError(function (Exception $e, \Rx\Observable $sourceObs) use ($obs2) {
+        return $obs2;
+    });
+
+$subscription = $source->subscribe($stdoutObserver);
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 42
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY catch_exception on_error_resume_next %}
      <p>
       RxPY implements the <span class="operator">Catch</span> operator with two distinct
