--- a/documentation/operators/empty-never-throw.html
+++ b/documentation/operators/empty-never-throw.html
@@ -197,6 +197,82 @@ Error: Error: error!</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP emptyObservable never error %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>emptyObservable</code>.
+    </p>
+    <p>
+    Returns an empty observable sequence.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/empty-observable/empty-observable.php
+
+$observable = \Rx\Observable::emptyObservable();
+$observable->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>never</code>.
+    </p>
+    <p>
+    Returns a non-terminating observable sequence, which can be used to denote an infinite duration.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/never/never.php
+
+$observable = \Rx\Observable::never();
+$observable->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+
+    </pre>
+</div>
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>error</code>.
+    </p>
+    <p>
+    Returns an observable sequence that terminates with an exception.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/error-observable/error-observable.php
+
+$observable = Rx\Observable::error(new Exception('Oops!'));
+$observable->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Exception: Oops!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY empty never throw throw_exception %}
     <p>
      <span style="color:#f00">TBD</span>
