--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -169,6 +169,37 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP just %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>just</code>.
+    </p>
+    <p>
+    Returns an observable sequence that contains a single element.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/just/just.php
+
+
+$source =  \Rx\Observable::just(42);
+
+$subscription = $source->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 42
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY just return_value %}
     <p>
      <span style="color:#f00">TBD</span>
