--- a/documentation/operators/merge.html
+++ b/documentation/operators/merge.html
@@ -500,6 +500,98 @@ Error: Error: whoops!</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP merge mergeAll %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>merge</code>.
+    </p>
+    <p>
+    Combine an Observable together with another Observable by merging their emissions into a single Observable.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/merge/merge.php
+
+$loop      = React\EventLoop\Factory::create();
+$scheduler = new Rx\Scheduler\EventLoopScheduler($loop);
+
+$observable       = Rx\Observable::just(42)->repeat();
+$otherObservable  = Rx\Observable::just(21)->repeat();
+$mergedObservable = $observable
+    ->merge($otherObservable)
+    ->take(10);
+
+$disposable = $mergedObservable->subscribe($stdoutObserver, $scheduler);
+
+$loop->run();
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 42
+Next value: 21
+Next value: 42
+Next value: 21
+Next value: 42
+Next value: 21
+Next value: 42
+Next value: 21
+Next value: 42
+Next value: 21
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>mergeAll</code>.
+    </p>
+    <p>
+    Merges an observable sequence of observables into an observable sequence.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/merge/merge-all.php
+
+$loop      = React\EventLoop\Factory::create();
+$scheduler = new Rx\Scheduler\EventLoopScheduler($loop);
+
+$sources = Rx\Observable::range(0, 3)
+    ->map(function ($x) {
+        return Rx\Observable::range($x, 3);
+    });
+
+$merged = \Rx\Observable::mergeAll($sources);
+
+$disposable = $merged->subscribe($stdoutObserver, $scheduler);
+
+$loop->run();
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 0
+Next value: 1
+Next value: 1
+Next value: 2
+Next value: 2
+Next value: 2
+Next value: 3
+Next value: 3
+Next value: 4
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY merge merge_all merge_observable %}
      <p>
       RxPY implements this operator as <code>merge</code> and 
