--- a/documentation/operators/range.html
+++ b/documentation/operators/range.html
@@ -136,6 +136,38 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP range %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>range</code>.
+    </p>
+    <p>
+    Generates an observable sequence of integral numbers within a specified range, using the specified scheduler to send out observer messages.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/range/range.php
+
+$observable = \Rx\Observable::range(0, 3);
+
+$observable->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 0
+Next value: 1
+Next value: 2
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY range %}
     <p>
      <span style="color:#f00">TBD</span>
