--- a/documentation/operators/retry.html
+++ b/documentation/operators/retry.html
@@ -274,6 +274,97 @@ subscribing</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP retry retryWhen %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>retry</code>.
+    </p>
+    <p>
+    Repeats the source observable sequence the specified number of times or until it successfully terminates. If the retry count is not specified, it retries indefinitely. Note if you encounter an error and want it to retry once, then you must use ->retry(2).
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/retry/retry.php
+
+$loop      = \React\EventLoop\Factory::create();
+$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
+
+$count = 0;
+
+$observable = Rx\Observable::interval(1000, $scheduler)
+    ->flatMap(function ($x) use (&$count) {
+        if (++$count < 2) {
+            return Rx\Observable::error(new \Exception("Something"));
+        }
+        return Rx\Observable::just(42);
+    })
+    ->retry(3)
+    ->take(1);
+
+$observable->subscribe($stdoutObserver);
+
+$loop->run();
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 42
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>retryWhen</code>.
+    </p>
+    <p>
+    Repeats the source observable sequence on error when the notifier emits a next value. If the source observable errors and the notifier completes, it will complete the source sequence.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/retry/retryWhen.php
+
+$loop      = new \React\EventLoop\StreamSelectLoop();
+$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
+
+$source = Rx\Observable::interval(1000)
+    ->map(function ($n) {
+        if ($n === 2) {
+            throw new Exception();
+        }
+        return $n;
+    })
+    ->retryWhen(function ($errors) {
+        return $errors->delay(200);
+    })
+    ->take(6);
+
+$subscription = $source->subscribe($createStdoutObserver(), $scheduler);
+
+$loop->run();
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 0
+Next value: 1
+Next value: 0
+Next value: 1
+Next value: 0
+Next value: 1
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY retry %}
      <p>
       RxPY implements this operator as <code>retry</code>:
