--- a/documentation/operators/skipwhile.html
+++ b/documentation/operators/skipwhile.html
@@ -160,6 +160,71 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP skipWhile skipWhileWithIndex %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>skipWhile</code>.
+    </p>
+    <p>
+    Bypasses elements in an observable sequence as long as a specified condition is true and then returns the remaining elements.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/skip/skipWhile.php
+
+$observable = Rx\Observable::range(1, 5)
+    ->skipWhile(function ($x) {
+        return $x < 3;
+    });
+
+$observable->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 3
+Next value: 4
+Next value: 5
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>skipWhileWithIndex</code>.
+    </p>
+    <p>
+    Bypasses elements in an observable sequence as long as a specified condition is true and then returns the remaining elements. The element's index is used in the logic of the predicate function.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/skip/skipWhileWithIndex.php
+
+$observable = Rx\Observable::range(1, 5)
+    ->skipWhileWithIndex(function ($i, $value) {
+        return $i < 3;
+    });
+
+$observable->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 4
+Next value: 5
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY skip_while %}
      <p>
       <span style="color:#ff0000">TBD</span>
