--- a/documentation/operators/timestamp.html
+++ b/documentation/operators/timestamp.html
@@ -152,6 +152,50 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP timestamp %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>timestamp</code>.
+    </p>
+    <p>
+    Records the timestamp for each value in an observable sequence.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/timestamp/timestamp.php
+
+$loop = new \React\EventLoop\StreamSelectLoop();
+
+$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
+
+$source = \Rx\Observable::interval(1000, $scheduler)
+    ->timestamp()
+    ->map(function (\Rx\Timestamped $x) {
+        return $x->getValue() . ':' . $x->getTimestampMillis();
+    })
+    ->take(5);
+
+$source->subscribe($createStdoutObserver());
+
+$loop->run();
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 0:1460781738354
+Next value: 1:1460781739358
+Next value: 2:1460781740359
+Next value: 3:1460781741362
+Next value: 4:1460781742367
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY timestamp %}
      <p>
       <span style="color:#ff0000">TBD</span>
